Fixed some of the image and screen sizing issues. Added a heading next to the logo. Need to fix media querie issues and spacing around elements.

--- a/Downloads/Portfolio/CompanyLandingPage/styles.css
+++ b/Downloads/Portfolio/CompanyLandingPage/styles.css
@@ -23,18 +23,18 @@ body{
 }
 
 .icon-header{ 
-    width: 100%; 
     display: flex; 
-    justify-content: flex-start;
-    margin-bottom: 20px; 
+    justify-items: flex-start; 
+    width: 100%; 
 }
 
 .icon-header img{ 
-    height: 50px;
+    height: 40px;
+    vertical-align: sub;
 }
 
 .hero-img{ 
-    margin-bottom: 20px; 
+    margin-bottom: 50px; 
   
 }
 
@@ -44,6 +44,11 @@ body{
     margin: 0 auto; 
 }
 
+h1{ 
+    font-family: 'Poppins', 'Open Sans', 'sans-serif';
+    color: white; 
+    font-size: 30px;
+}
 
 h2{ 
     font-family: 'Poppins', 'Open Sans', 'sans-serif';
@@ -57,12 +62,14 @@ h2{
     display: flex; 
     flex-direction: column;
     justify-content: center;
+    justify-content: space-evenly;
     /* text-align: center; */
     align-items: center;
     margin: 20px; 
+    height: 100%; 
+
 
 }
-
 
 .content{
     text-align:center;
@@ -106,7 +113,6 @@ p{
         flex-direction: column;
         /* width: 100%;  */
         height: 100%; 
-        justify-content: space-evenly;
         margin: 0 2rem; 
         padding-top: 50px; 
         padding-bottom: 50px;
@@ -118,12 +124,26 @@ p{
     .main{ 
         display: flex; 
         align-items: center;
-        gap: 40px; 
+        gap: 30px; 
+        width:100%; 
+        /* height:100%;  */
+    }
+    
+    /* p{ 
+        font-size: 14px;
+    } */
+    
+    h1{ 
+        font-size: 36px; 
+    }
+
+    .hero-img { 
+        width: 100%; 
+       vertical-align: center;
     }
 
     .hero-img img{ 
-        width: 100%; 
-       vertical-align: center;
+        width: 300px; 
     }
    
     .start-btn{ 
@@ -132,4 +152,11 @@ p{
     }
 
   
+}
+
+@media screen and (min-width: 1024px){ 
+    .hero-img img{ 
+        width: 400px; 
+    }
+   
 }
